# Tourbox_Neo_Linux_Driver

./: .gitignore  CMakeLists.txt  README.md  analysis.md
config/: config.json.example
cpp/: CMakeLists.txt  config_manager.cpp  config_manager.hpp  main.cpp  uinput_helper.cpp  uinput_helper.hpp  window_monitor.cpp  window_monitor.hpp
docs/: README.md
mock_ble/: Makefile  README.md  libBLEWrapper.cpp
